syntax = "proto3";
package opennms.rpc.echo;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.grpc.echo.contract";

import "opennms_minion_ipc.proto";

message EchoRequest {
  uint64 id = 2;
  string message = 3;
  optional string body = 4;
  int64 delay = 5;
  bool throw = 6;
}

message EchoResponse {
  int64 id = 2;
  string error =3 ;
  string message = 4;
  optional string body = 5;
}
